--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html>
 <body>
-
-<h2>HTML Ima222ge</h2>
-<img src="giphy.gif" >
-123
+<img src="giphy.gif"width="750"height="640"style="display:block; margin:auto;">
+<audio controls autoplay>
+  <source src="123.ogg" type="audio/ogg">
+  <source src="123.mp3" type="audio/mpeg">
+</audio>
 </body>
-</html>
